# azure-bootstrap

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MIGRATING-FROM-V1.md  README.md  pyproject.toml
.cursor/rules/: claude.mdc
.githooks/: install-hooks.ps1  install-hooks.sh  pre-commit  pre-push
.github/workflows/: ci-cd.yml
azure_bootstrap/: __init__.py
azure_bootstrap/alerts/: __init__.py  dispatcher.py  escalation.py  render.py
azure_bootstrap/audit/: __init__.py
azure_bootstrap/auth/: __init__.py  api_key.py  webhook.py
azure_bootstrap/bootstrap/: __init__.py
azure_bootstrap/config_refresh/: __init__.py
azure_bootstrap/counters/: __init__.py
azure_bootstrap/exceptions/: __init__.py
azure_bootstrap/failclose/: __init__.py
azure_bootstrap/fastapi_middleware/: __init__.py
azure_bootstrap/health/: __init__.py
azure_bootstrap/heartbeat/: __init__.py
azure_bootstrap/identity/: __init__.py
azure_bootstrap/ingress/: __init__.py  classifier.py  extensions.py  magic_bytes.py  mime.py  size.py  zip_safety.py
azure_bootstrap/logging/: __init__.py  config.py  correlation.py  formatter.py  jsonformatter.py  masking.py  noise.py
azure_bootstrap/metrics/: __init__.py
azure_bootstrap/models/: __init__.py  exceptions.py
azure_bootstrap/notify/: __init__.py  templates.py  throttle.py
azure_bootstrap/openai/: __init__.py
azure_bootstrap/path_safety/: __init__.py
azure_bootstrap/pdf_safety/: __init__.py
azure_bootstrap/phases/: __init__.py
azure_bootstrap/ratelimit/: __init__.py
azure_bootstrap/repositories/: __init__.py  enhanced_config_repository.py  secrets_repository.py
azure_bootstrap/repositories/interfaces/: __init__.py  enhanced_config_repository_interface.py  secrets_repository_interface.py
azure_bootstrap/retry/: __init__.py
azure_bootstrap/sb_lock/: __init__.py
azure_bootstrap/scheduler/: __init__.py
azure_bootstrap/security/: __init__.py
azure_bootstrap/servicebus/: __init__.py  consumer.py  consumer_wrapper.py  dlq_alarm.py  dlq_digest.py
azure_bootstrap/services/: __init__.py  application_bootstrap.py  bootstrap_logging.py  telemetry.py
azure_bootstrap/services/interfaces/: __init__.py  application_bootstrap_interface.py  bootstrap_logger_interface.py  telemetry_manager_interface.py
azure_bootstrap/softfail/: __init__.py
azure_bootstrap/subscription/: __init__.py
azure_bootstrap/tokens/: __init__.py
azure_bootstrap/tracing/: __init__.py  decorators.py  latency.py  log_exception_context.py  slow_thresholds.py  timed_operation.py
azure_bootstrap/transports/: __init__.py  builtins.py  sumologic.py
azure_bootstrap/validation/: __init__.py
examples/: 01_quickstart.py  02_structured_logging.py  03_correlation_scope.py  04_traced_decorator.py  05_slow_thresholds.py  06_counters.py  07_local_settings.py  08_exception_hierarchy.py  09_soft_fail.py  10_phases.py  11_validation.py  12_path_safety.py  13_security_compare.py  14_retry.py  15_ingress_classifier.py  16_zip_bomb_defense.py  17_ratelimit.py  18_notify.py  19_subscription.py  20_pdf_sanitize.py  21_consumer_wrapper.py  22_identity.py  23_audit_logs.py  24_failclose.py  25_webhook_route.py  26_sb_lock.py  27_alerts_dispatcher.py  28_global_exception_hooks.py  29_health_probes.py  30_fastapi_middleware.py  31_heartbeat_watchdog.py  32_config_refresh.py  33_dlq_digest.py  34_dlq_resubmit_tokens.py  35_openai_tracker.py  36_scheduler.py  37_metrics_endpoint.py  38_logging_transports.py  README.md  e2e_aks_sb_worker.py  (+4 more)
test/: __init__.py  conftest.py
test/alerts/: test_dispatcher.py  test_render.py
test/audit/: test_audit.py
test/auth/: test_auth.py
test/bootstrap/: test_bootstrap.py
test/config_refresh/: test_refresh_log_flags.py
test/counters/: test_counters.py
test/exceptions/: test_exceptions.py
test/failclose/: test_failclose.py
test/fastapi/: test_middleware.py
test/health/: test_health.py
test/heartbeat/: test_heartbeat.py
test/identity/: test_identity.py
test/ingress/: test_ingress.py
test/logging/: test_config_and_noise.py  test_correlation.py  test_formatter.py  test_masking.py
test/metrics/: test_metrics_snapshot.py
test/notify/: test_notify.py
test/openai/: test_tracker.py
test/path_safety/: test_path_safety.py
test/pdf_safety/: test_pdf_safety.py
test/phases/: test_phases.py
test/ratelimit/: test_ratelimit.py
test/repositories/: __init__.py  test_enhanced_config_repository.py  test_secrets_repository.py
test/retry/: test_retry.py
test/sb_lock/: test_sb_lock.py
test/scheduler/: test_parse_cron.py
test/security/: test_security.py
test/servicebus/: test_consumer_wrapper.py  test_dlq.py
test/services/: __init__.py  test_application_bootstrap.py  test_bootstrap_logging.py  test_telemetry.py
test/softfail/: test_softfail.py
test/subscription/: test_subscription.py
test/tokens/: test_tokens.py
test/tracing/: test_decorators.py  test_latency.py  test_slow_thresholds.py  test_timed_and_log.py
test/transports/: conftest.py  test_app_insights.py  test_configure_transports.py  test_jsonformatter.py  test_registry.py  test_reset_gating.py  test_sumologic.py
test/validation/: test_validation.py
