[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-bootstrap"
version = "1.0.0"
description = "Production-ready Azure bootstrap library for App Configuration, Key Vault, and App Insights integration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Adam Matthew Steinberger", email = "Adam.Steinberger@vizius.com"}
]
maintainers = [
    {name = "Adam Matthew Steinberger", email = "Adam.Steinberger@vizius.com"}
]
keywords = [
    "azure",
    "bootstrap",
    "configuration",
    "app-config",
    "key-vault",
    "app-insights",
    "telemetry",
    "azure-functions",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.11"

dependencies = [
    "azure-appconfiguration-provider>=1.0.0",
    "azure-keyvault-secrets>=4.7.0",
    "azure-identity>=1.15.0",
    "azure-monitor-opentelemetry>=1.2.0",
    "opentelemetry-api>=1.22.0",
    # Security: pin minimum versions for transitive dependencies with known CVEs
    "azure-core>=1.38.0",  # CVE-2026-21226: code execution via deserialization
    "filelock>=3.20.3",  # CVE-2025-68146, CVE-2026-22701: symlink TOCTOU attacks
    "urllib3>=2.6.3",  # CVE-2026-21441: decompression bomb on redirects
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "mypy>=1.5.0",
    "isort>=5.12.0",
    "bandit>=1.7.5",
    "pip-audit>=2.6.0",
    "build>=1.0.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
]

[project.urls]
Homepage = "https://github.com/TheViziusGroup/azure-bootstrap"
Repository = "https://github.com/TheViziusGroup/azure-bootstrap"
Documentation = "https://github.com/TheViziusGroup/azure-bootstrap#readme"
Issues = "https://github.com/TheViziusGroup/azure-bootstrap/issues"

[tool.setuptools]
packages = [
    "azure_bootstrap",
    "azure_bootstrap.models",
    "azure_bootstrap.repositories",
    "azure_bootstrap.repositories.interfaces",
    "azure_bootstrap.services",
    "azure_bootstrap.services.interfaces",
]

[tool.setuptools.package-data]
azure_bootstrap = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
]
addopts = [
    "--verbose",
    "--cov=azure_bootstrap",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [".venv/*", "build/*", "dist/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex (we'll manage complexity ourselves)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "azure.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "opentelemetry.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["azure_bootstrap"]
omit = [
    "test/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
fail_under = 80

[tool.bandit]
exclude_dirs = [".venv", "test", "build", "dist"]
skips = ["B101"]  # Skip assert_used (common in tests)
